--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-07 Sat 13:11]
+#+CAPTION: Clock summary at [2017-01-07 Sat 13:23]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *38:02* |       |      | 100.0 |
+| *Total time*                                                                | *38:13* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 38:02   |       |      | 100.0 |
-| Active                                                                      |         | 38:02 |      | 100.0 |
+| Stories                                                                     | 38:13   |       |      | 100.0 |
+| Active                                                                      |         | 38:13 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:30 |   1.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   2.5 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   8.9 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  22.8 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  22.7 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.1 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   2.8 |
 | COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  17.4 |
 | COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   7.6 |
-| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  12.8 |
-| STARTED Add container types to C# proxy models                              |         |       | 8:37 |  22.7 |
+| COMPLETED Add internal object dumper resolution                             |         |       | 4:51 |  12.7 |
+| STARTED Add container types to C# proxy models                              |         |       | 8:48 |  23.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -420,6 +420,7 @@ for all model types and primitives. Add a registrar for local dumpers.
 : }
 
 *** STARTED Add container types to C# proxy models                    :story:
+    CLOCK: [2017-01-07 Sat 13:12]--[2017-01-07 Sat 13:23] =>  0:11
     CLOCK: [2017-01-07 Sat 12:58]--[2017-01-07 Sat 13:11] =>  0:13
     CLOCK: [2017-01-07 Sat 12:30]--[2017-01-07 Sat 12:57] =>  0:27
     CLOCK: [2017-01-07 Sat 11:02]--[2017-01-07 Sat 11:57] =>  0:55
