quilt.csharp: add sorted list

--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -420,6 +420,7 @@ for all model types and primitives. Add a registrar for local dumpers.
 : }
 
 *** STARTED Add container types to C# proxy models                    :story:
+    CLOCK: [2017-01-07 Sat 13:30]--[2017-01-07 Sat 13:40] =>  0:10
     CLOCK: [2017-01-07 Sat 13:24]--[2017-01-07 Sat 13:29] =>  0:05
     CLOCK: [2017-01-07 Sat 13:12]--[2017-01-07 Sat 13:23] =>  0:11
     CLOCK: [2017-01-07 Sat 12:58]--[2017-01-07 Sat 13:11] =>  0:13
