--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,29 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-08 Sun 11:40]
+#+CAPTION: Clock summary at [2017-01-10 Tue 16:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *42:48* |       |      | 100.0 |
+| *Total time*                                                                | *54:04* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 42:48   |       |      | 100.0 |
-| Active                                                                      |         | 42:48 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   2.2 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   7.9 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  20.2 |
-| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   1.0 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   2.5 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  15.5 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   6.8 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   7.6 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |  13.6 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.8 |
-| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.4 |
-| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   2.8 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |  11.3 |
-| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   3.0 |
+| Stories                                                                     | 54:04   |       |      | 100.0 |
+| Active                                                                      |         | 54:04 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.8 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   6.3 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  16.0 |
+| COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.8 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   2.0 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  12.3 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   5.4 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   6.0 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |  10.7 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.3 |
+| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.1 |
+| STARTED Build dogen on windows locally                                      |         |       | 7:32 |  13.9 |
+| STARTED Generate windows packages with WIX                                  |         |       | 2:44 |   5.1 |
+| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   2.2 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   9.0 |
+| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.3 |
+| STARTED Add appveyor support for bintray                                    |         |       | 1:00 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -736,6 +739,22 @@ not be considered.
 We should attempt to implement generic collections with the existing
 yarn infrastructure first and see where/if it breaks.
 
+*** STARTED Build dogen on windows locally                            :story:
+    CLOCK: [2017-01-10 Tue 09:27]--[2017-01-10 Tue 12:00] =>  2:33
+    CLOCK: [2017-01-09 Mon 14:01]--[2017-01-09 Mon 19:00] =>  4:59
+
+At present we are building on AppVeyor and that works well
+enough. However, in order to fix the errors we are getting in AppVeyor
+we need to build locally on windows. This may not be quite so trivial
+due to proxy, etc.
+
+*** STARTED Generate windows packages with WIX                        :story:
+    CLOCK: [2017-01-10 Tue 14:00]--[2017-01-10 Tue 15:09] =>  1:09
+    CLOCK: [2017-01-10 Tue 12:00]--[2017-01-10 Tue 13:35] =>  1:35
+
+It seems NSIS is no longer considered the right way of building
+windows installers. One should instead use WIX. Add support for WIX.
+
 *** STARTED Add auxiliary function properties to c#                   :story:
     CLOCK: [2017-01-08 Sun 11:27]--[2017-01-08 Sun 11:40] =>  0:13
     CLOCK: [2017-01-08 Sun 10:56]--[2017-01-08 Sun 11:26] =>  0:30
@@ -819,6 +838,31 @@ Notes:
 
 - we need a way to determine if we are using a helper, the assistant
   or a sequence generator directly.
+
+*** STARTED Add appveyor support for bintray                          :story:
+    CLOCK: [2017-01-10 Tue 15:10]--[2017-01-10 Tue 16:10] =>  1:00
+
+It seems appveyor also supports bintray:
+
+[[https://www.appveyor.com/docs/deployment/bintray/][Deploying to Bintray]]
+
+We need to change our targets to generate the MSI, and then try to
+deploy it over to bintray.
+
+Sample:
+
+: deploy:
+: - provider: BinTray
+:   username: johnsmith
+:   api_key:
+:     secure: AABBCC+DDD==
+:   subject: johnsmith
+:   repo: myrepo
+:   package: mypackage
+:   version: version
+:   publish: true
+:   override: true
+:   explode: true
 
 *** Add support for boxed types                                       :story:
 
