--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,34 +12,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-10 Tue 21:35]
+#+CAPTION: Clock summary at [2017-01-11 Wed 10:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *55:02* |       |      | 100.0 |
+| *Total time*                                                                | *57:01* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 55:02   |       |      | 100.0 |
-| Active                                                                      |         | 55:02 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.1 |
+| Stories                                                                     | 57:01   |       |      | 100.0 |
+| Active                                                                      |         | 57:01 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.7 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   6.2 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  15.7 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   6.0 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  15.2 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.8 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   2.0 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  12.1 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   5.3 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.9 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |  10.5 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.2 |
-| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.1 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.9 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  11.6 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   5.1 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.7 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |  10.2 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   2.1 |
+| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   1.0 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.6 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  13.7 |
-| COMPLETED Fix borked windows build                                          |         |       | 0:39 |   1.2 |
-| STARTED Generate windows packages with WIX                                  |         |       | 2:44 |   5.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  13.2 |
+| COMPLETED Fix borked windows build                                          |         |       | 1:54 |   3.3 |
+| STARTED Generate windows packages with WIX                                  |         |       | 3:28 |   6.1 |
 | STARTED Add appveyor support for bintray                                    |         |       | 1:00 |   1.8 |
-| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   2.2 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   8.8 |
-| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.3 |
+| STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   2.1 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   8.5 |
+| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -760,6 +760,7 @@ due to proxy, etc.
 
 *** COMPLETED Fix borked windows build                                :story:
     CLOSED: [2017-01-10 Tue 21:34]
+    CLOCK: [2017-01-11 Wed 08:52]--[2017-01-11 Wed 10:07] =>  1:15
     CLOCK: [2017-01-10 Tue 20:55]--[2017-01-10 Tue 21:34] =>  0:39
 
 It seems that conan does not support static runtimes for boost or
@@ -838,6 +839,7 @@ machine type 'X86']]
 Debug build is back down to =knit= target again.
 
 *** STARTED Generate windows packages with WIX                        :story:
+    CLOCK: [2017-01-11 Wed 10:08]--[2017-01-11 Wed 10:52] =>  0:44
     CLOCK: [2017-01-10 Tue 14:00]--[2017-01-10 Tue 15:09] =>  1:09
     CLOCK: [2017-01-10 Tue 12:00]--[2017-01-10 Tue 13:35] =>  1:35
 
